@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2019-03-06  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/mat.c (ReadMATImage): Quit if image scanlines are not
+fully populated due to exception.  Fixes oss-fuzz 13530
+&quot;graphicsmagick/coder_MAT_fuzzer: Use-of-uninitialized-value in
+InsertComplexFloatRow&quot;. (Credit to OSS-Fuzz)</li>
+</ul>
+</blockquote>
 <p>2019-03-04  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
